fix phone version

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
     <title>choco 4th week</title>
     <link rel="stylesheet" href="./css/main.css">
+<!--    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">-->
 </head>
 <body>
-<div class="wrapper">
-    <div class="maincontent">
-        <section data-sidemenu-theme="white" data-section-id="hero" class="hero">
+<div class="wrapper swiper-container">
+    <div class="maincontent swiper-wrapper">
+        <section data-sidemenu-theme="white" data-section-id="hero" class="swiper-slide hero">
             <div class="container hero__container">
                 <header class="header">
                     <a class="logo" href="#">
@@ -87,7 +88,7 @@
                                         </a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="how-we-working" class="menu__link">
+                                        <a href="our-work" class="menu__link">
                                             Как мы работаем
                                         </a>
                                     </li>
@@ -147,7 +148,7 @@
         </section>
 
 
-        <section data-sidemenu-theme="green" data-section-id="why" class="section benefits-section" id="about-us">
+        <section data-sidemenu-theme="green" data-section-id="why" class="swiper-slide section benefits-section" id="about-us">
 
             <div class="container">
                 <div class="headline">
@@ -223,7 +224,7 @@
 
         </section>
 
-        <section data-sidemenu-theme="green" data-section-id="slider" class="section slider-section" id="bars">
+        <section data-sidemenu-theme="green" data-section-id="slider" class="swiper-slide section slider-section" id="bars">
 
 
             <div class="container slider-container">
@@ -396,88 +397,6 @@
 
                             </div>
                         </li>
-                        <li class="slider__item">
-                            <div class="slider__item-img-wrapper">
-                                <img class="slider__item-img" src="./img/icons/order-page/bars1.png" alt="">
-                            </div>
-                            <div class="slider-desc">
-                                <div class="dropdown">
-                                    <div class="dropdown__icon-wrapper">
-                                        <img class="dropdown__icon" src="./img/icons/chocolate-bar.svg" alt="">
-                                        <span class="dropdown__title">Состав</span>
-                                    </div>
-                                    <div class="dropdown__menu">
-                                        <ul class="dropdown__list">
-                                            <li class="dropdown__item">
-                                                <div class="dropdown__item-icon-wrapper">
-                                                    <img class="dropdown__item-icon" src="./img/icons/grape.svg" alt="">
-                                                </div>
-                                                <span class="dropdown__item-name">Виноград</span>
-                                                <span class="dropdown__item-weight">25г</span>
-                                            </li>
-                                            <li class="dropdown__item">
-                                                <div class="dropdown__item-icon-wrapper">
-                                                    <img class="dropdown__item-icon" src="./img/icons/nut.svg" alt="">
-                                                </div>
-                                                <span class="dropdown__item-name">Грецкий орех</span>
-                                                <span class="dropdown__item-weight">32г</span>
-                                            </li>
-                                            <li class="dropdown__item">
-                                                <div class="dropdown__item-icon-wrapper">
-                                                    <img class="dropdown__item-icon" src="./img/icons/almond.svg" alt="">
-                                                </div>
-                                                <span class="dropdown__item-name">Кунжутное семя</span>
-                                                <span class="dropdown__item-weight">20г</span>
-                                            </li>
-                                            <li class="dropdown__item">
-                                                <div class="dropdown__item-icon-wrapper">
-                                                    <img class="dropdown__item-icon" src="./img/icons/powder.svg" alt="">
-                                                </div>
-                                                <span class="dropdown__item-name">Сухое молоко</span>
-                                                <span class="dropdown__item-weight">20г</span>
-                                            </li>
-                                            <li class="dropdown__item">
-                                                <div class="dropdown__item-icon-wrapper">
-                                                    <img class="dropdown__item-icon" src="./img/icons/apitherapy.svg" alt="">
-                                                </div>
-                                                <span class="dropdown__item-name">Зам.сахара</span>
-                                                <span class="dropdown__item-weight">20г</span>
-                                            </li>
-                                            <li class="dropdown__item">
-                                                <div class="dropdown__item-icon-wrapper">
-                                                    <img class="dropdown__item-icon" src="./img/icons/beans.svg" alt="">
-                                                </div>
-                                                <span class="dropdown__item-name">Какао бобы</span>
-                                                <span class="dropdown__item-weight">20г</span>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <h2 class="slider-desc__title">Батончик “Test test”</h2>
-                                <div class="slider-desc__subtitle">
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque distinctio facere laborum modi nulla quaerat quo, ut.
-                                        Ad cupiditate, distinctio dolores dolorum enim esse labore quae quos sequi tempora temporibus!
-                                    </p>
-                                </div>
-                                <div class="slider-desc__props">
-                                    <div class="slider-desc__props-col">
-                                        <span class="slider-desc__props-name">Каллорийность</span>
-                                        <span class="slider-desc__props-value">110000 ккал</span>
-                                    </div>
-                                    <div class="slider-desc__props-col">
-                                        <span class="slider-desc__props-name">Вес</span>
-                                        <span class="slider-desc__props-value">995 грамм</span>
-                                    </div>
-                                </div>
-                                <div class="slider-desc__price-section">
-                                    <div class="slider-desc__price">9 990 ₽</div>
-                                    <a href="#" data-scroll-to="orders" class="order-form-btn btn">Заказать</a>
-                                </div>
-
-
-                            </div>
-                        </li>
                     </ul>
                 </div>
 
@@ -490,7 +409,7 @@
 
         </section>
 
-        <section data-sidemenu-theme="green" data-section-id="team" class="section team-section" id="team">
+        <section data-sidemenu-theme="green" data-section-id="team" class="swiper-slide section team-section" id="team">
             <div class="container">
                 <div class="section__title">Команда</div>
                 <ul class="team team-version-desktop">
@@ -626,7 +545,7 @@
             </div>
         </section>
 
-        <section data-sidemenu-theme="white" data-section-id="accordion" class="section accordion">
+        <section data-sidemenu-theme="white" data-section-id="accordion" class="swiper-slide section accordion" id="menu">
             <div class="accordion__container">
                 <div class="accordion__slide-title-container">
                     <h2 class="accordion__slide-title">меню</h2>
@@ -641,7 +560,7 @@
                                 <div class="sizes__item-description">
                                     <p>
                                         Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком.
-                                        Так и вкуснее, и полезнее.  Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг.
+                                        Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг.
                                         Как классно, что можно питаться полезно и вкусно, а не как попало.
                                         Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто.
                                         Надо бы, кстати, бабулю поздравить с днём Победы.
@@ -655,7 +574,7 @@
                                 <div class="sizes__item-description">
                                     <p>
                                         Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком.
-                                        Так и вкуснее, и полезнее.  Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг.
+                                        Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг.
                                         Как классно, что можно питаться полезно и вкусно, а не как попало.
                                         Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто.
                                         Надо бы, кстати, бабулю поздравить с днём Победы.
@@ -669,7 +588,7 @@
                                 <div class="sizes__item-description">
                                     <p>
                                         Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком.
-                                        Так и вкуснее, и полезнее.  Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг.
+                                        Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг.
                                         Как классно, что можно питаться полезно и вкусно, а не как попало.
                                         Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто.
                                         Надо бы, кстати, бабулю поздравить с днём Победы.
@@ -682,7 +601,7 @@
             </div>
         </section>
 
-        <section data-sidemenu-theme="green" data-section-id="reviews" class="section reviews-section" id="reveiws">
+        <section data-sidemenu-theme="green" data-section-id="reviews" class="swiper-slide section reviews-section" id="reveiws">
             <div class="container">
                 <h2 class="section__title">Отзывы</h2>
                 <div class="reviews">
@@ -796,7 +715,7 @@
             </div>
         </section>
 
-        <section data-sidemenu-theme="green" data-section-id="our-work" class="section video-section">
+        <section data-sidemenu-theme="green" data-section-id="our-work" class="swiper-slide section video-section" id="our-work">
             <h2 class="section__title">Как мы работаем</h2>
             <div class="video__container">
                 <div class="video__player">
@@ -820,7 +739,7 @@
             </div>
         </section>
 
-        <section data-sidemenu-theme="green" data-section-id="orders" class="section order-section section--font-color--green" id="team">
+        <section data-sidemenu-theme="green" data-section-id="orders" class="swiper-slide section order-section section--font-color--green" id="team">
             <div class="container">
                 <h2 class="section__title">Закажите доставку</h2>
                 <form class="form">
@@ -907,7 +826,7 @@
             </div>
         </section>
 
-        <section data-sidemenu-theme="green" data-section-id="map" class="section map-section" id="contacts">
+        <section data-sidemenu-theme="green" data-section-id="map" class="swiper-slide section map-section" id="contacts">
             <div id="map"></div>
             <footer class="footer">
                 <div class="container footer__container">
@@ -1007,8 +926,12 @@
     </div>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.js" integrity="sha512-gRg3MTbqGUwZiqkDRUj7BJOqiYX6tQDAkZVq6zCHfRUxBhoW0kRG4ASllaK31PIe+I+xdaJhLcZXbs2O2r8SRg==" crossorigin="anonymous"></script>
+<!--<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.js" integrity="sha512-gRg3MTbqGUwZiqkDRUj7BJOqiYX6tQDAkZVq6zCHfRUxBhoW0kRG4ASllaK31PIe+I+xdaJhLcZXbs2O2r8SRg==" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" integrity="sha512-YYiD5ZhmJ0GCdJvx6Xe6HzHqHvMpJEPomXwPbsgcpMFPW+mQEeVBU6l9n+2Y+naq+CLbujk91vHyN18q6/RSYw==" crossorigin="anonymous"></script>-->
+<!--    <script src="./js/swiper.js"></script>-->
     <script src="./js/map.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/tabs.js"></script>
