fix burger menu

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <!--    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">-->
 </head>
 <body>
-<div class="wrapper swiper-container">
-    <div class="maincontent swiper-wrapper">
-        <section data-sidemenu-theme="white" data-section-id="hero" class="swiper-slide hero">
+<div class="wrapper">
+    <div class="maincontent">
+        <section data-sidemenu-theme="white" data-section-id="hero" class="hero">
             <div class="container hero__container">
                 <header class="header">
                     <a class="logo" href="#">
@@ -53,11 +53,7 @@
                         <span class="phone-number__text">8 800 903 90 90</span>
                     </a>
 
-                    <div class="burger" id="burger">
-                        <span class="burger__line"></span>
-                        <span class="burger__line"></span>
-                        <span class="burger__line"></span>
-                    </div>
+
                     <div class="overlay" id="overlay">
                         <div class="overlay__menu" id="overlay__menu">
                             <nav class="menu">
@@ -148,7 +144,7 @@
         </section>
 
 
-        <section data-sidemenu-theme="green" data-section-id="why" class="swiper-slide section benefits-section" id="about-us">
+        <section data-sidemenu-theme="green" data-section-id="why" class="section benefits-section" id="about-us">
 
             <div class="container">
                 <div class="headline">
@@ -224,7 +220,7 @@
 
         </section>
 
-        <section data-sidemenu-theme="green" data-section-id="slider" class="swiper-slide section slider-section" id="bars">
+        <section data-sidemenu-theme="green" data-section-id="slider" class="section slider-section" id="bars">
 
 
             <div class="container slider-container">
@@ -409,7 +405,7 @@
 
         </section>
 
-        <section data-sidemenu-theme="green" data-section-id="team" class="swiper-slide section team-section" id="team">
+        <section data-sidemenu-theme="green" data-section-id="team" class="section team-section" id="team">
             <div class="container">
                 <div class="section__title">Команда</div>
                 <ul class="team team-version-desktop">
@@ -545,7 +541,7 @@
             </div>
         </section>
 
-        <section data-sidemenu-theme="white" data-section-id="accordion" class="swiper-slide section accordion" id="menu">
+        <section data-sidemenu-theme="white" data-section-id="accordion" class="section accordion" id="menu">
             <div class="accordion__container">
                 <div class="accordion__slide-title-container">
                     <h2 class="accordion__slide-title">меню</h2>
@@ -601,7 +597,7 @@
             </div>
         </section>
 
-        <section data-sidemenu-theme="green" data-section-id="reviews" class="swiper-slide section reviews-section" id="reveiws">
+        <section data-sidemenu-theme="green" data-section-id="reviews" class="section reviews-section" id="reveiws">
             <div class="container">
                 <h2 class="section__title">Отзывы</h2>
                 <div class="reviews">
@@ -715,7 +711,7 @@
             </div>
         </section>
 
-        <section data-sidemenu-theme="green" data-section-id="our-work" class="swiper-slide section video-section" id="our-work">
+        <section data-sidemenu-theme="green" data-section-id="our-work" class="section video-section" id="our-work">
             <h2 class="section__title">Как мы работаем</h2>
             <div class="video__container">
                 <div class="video__player">
@@ -739,7 +735,7 @@
             </div>
         </section>
 
-        <section data-sidemenu-theme="green" data-section-id="orders" class="swiper-slide section order-section section--font-color--green" id="team">
+        <section data-sidemenu-theme="green" data-section-id="orders" class="section order-section section--font-color--green" id="team">
             <div class="container">
                 <h2 class="section__title">Закажите доставку</h2>
                 <form class="form">
@@ -826,7 +822,7 @@
             </div>
         </section>
 
-        <section data-sidemenu-theme="green" data-section-id="map" class="swiper-slide section map-section" id="contacts">
+        <section data-sidemenu-theme="green" data-section-id="map" class="section map-section" id="contacts">
             <div id="map"></div>
             <footer class="footer">
                 <div class="container footer__container">
@@ -883,7 +879,11 @@
 
     </div>
 </div>
-
+<div class="burger" id="burger">
+    <span class="burger__line"></span>
+    <span class="burger__line"></span>
+    <span class="burger__line"></span>
+</div>
 
 <div class="fixed-menu">
     <ul class="fixed-menu__list">
