fix full screen menu link

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                         </a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="our-work" class="menu__link">
+                                        <a href="#our-work" class="menu__link">
                                             Как мы работаем
                                         </a>
                                     </li>
