--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
     <title>choco 4th week</title>
     <link rel="stylesheet" href="./css/main.css">
-<!--    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">-->
 </head>
 <body>
 <div class="wrapper">
@@ -54,49 +53,7 @@
                     </a>
 
 
-                    <div class="overlay" id="overlay">
-                        <div class="overlay__menu" id="overlay__menu">
-                            <nav class="menu">
-                                <ul class="menu__list">
-                                    <li class="menu__item">
-                                        <a href="#about-us" class="menu__link">
-                                            О нас
-                                        </a>
-                                    </li>
-                                    <li class="menu__item">
-                                        <a href="#bars" class="menu__link">
-                                            Батончики
-                                        </a>
-                                    </li>
-                                    <li class="menu__item">
-                                        <a href="#team" class="menu__link">
-                                            Команда
-                                        </a>
-                                    </li>
-                                    <li class="menu__item">
-                                        <a href="#menu" class="menu__link">
-                                            Меню
-                                        </a>
-                                    </li>
-                                    <li class="menu__item">
-                                        <a href="#reveiws" class="menu__link">
-                                            Отзывы
-                                        </a>
-                                    </li>
-                                    <li class="menu__item">
-                                        <a href="#our-work" class="menu__link">
-                                            Как мы работаем
-                                        </a>
-                                    </li>
-                                    <li class="menu__item">
-                                        <a href="#contacts" class="menu__link">
-                                            Контакты
-                                        </a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                        </div>
+
 
                 </header>
 
@@ -885,6 +842,50 @@
     <span class="burger__line"></span>
 </div>
 
+<div class="overlay" id="overlay">
+    <div class="overlay__menu" id="overlay__menu">
+        <nav class="menu">
+            <ul class="menu__list">
+                <li class="menu__item">
+                    <a href="#about-us" class="menu__link">
+                        О нас
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#bars" class="menu__link">
+                        Батончики
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#team" class="menu__link">
+                        Команда
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#menu" class="menu__link">
+                        Меню
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#reveiws" class="menu__link">
+                        Отзывы
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#our-work" class="menu__link">
+                        Как мы работаем
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#contacts" class="menu__link">
+                        Контакты
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</div>
+
 <div class="fixed-menu">
     <ul class="fixed-menu__list">
         <li class="fixed-menu__item fixed-menu__item--active">
@@ -926,14 +927,10 @@
     </div>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU"></script>
-<!--<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.js" integrity="sha512-gRg3MTbqGUwZiqkDRUj7BJOqiYX6tQDAkZVq6zCHfRUxBhoW0kRG4ASllaK31PIe+I+xdaJhLcZXbs2O2r8SRg==" crossorigin="anonymous"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" integrity="sha512-YYiD5ZhmJ0GCdJvx6Xe6HzHqHvMpJEPomXwPbsgcpMFPW+mQEeVBU6l9n+2Y+naq+CLbujk91vHyN18q6/RSYw==" crossorigin="anonymous"></script>-->
-<!--    <script src="./js/swiper.js"></script>-->
     <script src="./js/map.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/mySwiper.js"></script>
     <script src="./js/tabs.js"></script>
     <script src="./js/ops.js"></script>
     <script src="./js/reviews-acco.js"></script>
