--- a/index.html
+++ b/index.html
@@ -927,10 +927,12 @@
     </div>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.4/mobile-detect.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touch/1.1.0/jquery.touch.min.js" integrity="sha512-aIllT5ONVk5YjYosfycKuUdZwGll1U9LRgBvNNagocaLMmwVPJ0cmydLEjNN6LQvDGa8eDe7sW4Ug138240UyQ==" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU"></script>
     <script src="./js/map.js"></script>
     <script src="./js/index.js"></script>
-    <script src="./js/mySwiper.js"></script>
     <script src="./js/tabs.js"></script>
     <script src="./js/ops.js"></script>
     <script src="./js/reviews-acco.js"></script>
